# PII-Safe-Privacy-Guard-for-Agentic-AI-MCP-Workflows

./: .gitignore  README.md
backend/: main.py  pyproject.toml
backend/api/: __init__.py  analysis.py  main.py  pipeline.py
backend/detector/: __init__.py  entity_detector.py  schema_detector.py
backend/mcp_server/: __init__.py  server.py
backend/policy/: __init__.py  engine.py  rules.yaml
backend/sanitizer/: __init__.py  pseudonymizer.py  redactor.py  risk_scorer.py
backend/tests/: test_pipeline.py
examples/: demo.py  sample_security_log.json
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  index.css
